--- a/fs/package.json
+++ b/fs/package.json
@@ -1,12 +1,28 @@
 {
   "name": "@enstore/fs",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "File system utilities for Enstore storage system",
   "main": "src/index.ts",
+  "author": "Ricsam <oss@ricsam.dev>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ricsam/enstore.git",
+    "directory": "fs"
+  },
+  "keywords": [
+    "fs",
+    "file-system",
+    "storage",
+    "utilities"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.10.1",
+    "typescript": "^5.7.2",
+    "@types/bun": "^1.1.14"
+  }
 }
