--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "enstore",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "A secure and efficient file storage system",
+  "private": true,
+  "keywords": ["storage", "file-system", "secure", "cli"],
+  "author": "Ricsam <oss@ricsam.dev>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ricsam/enstore.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "workspaces": [
     "server",
     "cli",
     "fs"
   ],
   "dependencies": {
-    "prettier": "3.4.2"
+    "prettier": "3.4.2",
+    "@changesets/cli": "^2.27.10"
   }
 }
