--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,28 @@
 {
   "name": "@enstore/server",
-  "version": "0.0.0",
-  "main": "dist/index.js",
-  "scripts": {
-    "dev": "tsc && node dist/index.js",
-    "build": "tsc"
+  "version": "0.0.1",
+  "description": "Server component for Enstore file storage system",
+  "main": "src/index.ts",
+  "author": "Ricsam <oss@ricsam.dev>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ricsam/enstore.git",
+    "directory": "server"
   },
+  "keywords": [
+    "server",
+    "storage",
+    "file-system",
+    "secure",
+    "express"
+  ],
+  "scripts": {},
   "bin": {
     "enstore-server": "src/cli.ts"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
@@ -26,6 +38,8 @@
     "typescript": "^5.7.2",
     "memfs": "^4.15.0",
     "supertest": "^7.0.0",
-    "@types/bcrypt": "^5.0.2"
+    "@types/bcrypt": "^5.0.2",
+    "@swc/cli": "^0.5.2",
+    "@swc/core": "^1.10.1"
   }
 }
