--- a/fs/package.json
+++ b/fs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enstore/fs",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "File system utilities for Enstore storage system",
   "main": "src/index.ts",
   "author": "Ricsam <oss@ricsam.dev>",
@@ -19,10 +19,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "axios": "^1.7.9",
+    "form-data": "^4.0.1"
+  },
   "devDependencies": {
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.10.1",
     "typescript": "^5.7.2",
-    "@types/bun": "^1.1.14"
+    "@types/bun": "^1.1.14",
+    "@types/axios": "^0.14.4",
+    "@types/form-data": "^2.5.2"
   }
 }
