--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - run: bun install
       - run: bun test
-      - run: bun run build
+      - run: bun build.ts
