Remove rootDirectory from enstoreFs

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,4 +16,5 @@ jobs:
       - uses: oven-sh/setup-bun@v2
       - run: bun install
       - run: bun test
+      - run: bun typecheck
       - run: bun build.ts
