--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Ricsam <oss@ricsam.dev>",
   "license": "MIT",
   "scripts": {
-    "docs": "typedoc --out docs --tsconfig tsconfig.json --name enstore --entryPoints fs/src/index.ts --entryPoints server/src/index.ts"
+    "docs": "typedoc --out docs --tsconfig tsconfig.json --name enstore --entryPoints fs/src/index.ts --entryPoints server/src/index.ts",
+    "typecheck": "bun --filter '*' typecheck"
   },
   "repository": {
     "type": "git",
