--- a/fs/package.json
+++ b/fs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enstore/fs",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "File system utilities for Enstore storage system",
   "main": "src/index.ts",
   "author": "Ricsam <oss@ricsam.dev>",
@@ -29,6 +29,9 @@
     "typescript": "5.7.2",
     "@types/bun": "1.1.14",
     "@types/axios": "0.14.4",
-    "@types/form-data": "2.5.2"
+    "@types/form-data": "2.5.2",
+    "express": "^4.18.2",
+    "@types/express": "4.17.21",
+    "@enstore/server": "workspace:*"
   }
 }
