--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "prettier": "3.4.2",
     "@changesets/cli": "^2.27.10",
     "typedoc": "^0.27.6"
+  },
+  "devDependencies": {
+    "memfs": "4.15.1"
   }
 }
