--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,7 +68,7 @@ jobs:
           images: |
             ghcr.io/ricsam/enstore-server
           tags: |
-            type=ref
+            type=ref,event=push
       - name: Build and push enstore-server
         uses: docker/build-push-action@v4
         with:
