--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@enstore/cli",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Command-line interface for Enstore file storage system",
   "main": "src/index.ts",
   "author": "Ricsam <oss@ricsam.dev>",
@@ -32,6 +32,9 @@
     "@types/prompts": "2.4.9",
     "typescript": "5.7.2",
     "@swc/cli": "0.5.2",
-    "@swc/core": "1.10.4"
+    "@swc/core": "1.10.4",
+    "express": "4.21.2",
+    "@types/express": "4.17.21",
+    "@enstore/server": "workspace:*"
   }
 }
