--- a/cli/package.json
+++ b/cli/package.json
@@ -35,6 +35,7 @@
     "@swc/core": "1.10.4",
     "express": "4.21.2",
     "@types/express": "4.17.21",
+    "body-parser": "^1.20.3",
     "@enstore/server": "workspace:*"
   }
 }
