--- a/fs/package.json
+++ b/fs/package.json
@@ -31,6 +31,7 @@
     "@types/axios": "0.14.4",
     "@types/form-data": "2.5.2",
     "express": "4.21.2",
+    "body-parser": "^1.20.3",
     "@types/express": "4.17.21",
     "@enstore/server": "workspace:*"
   }
